add dynamic check bundle version to prevent browser cache

--- a/Assets/WebGLTemplates/PWA_v2/index.html
+++ b/Assets/WebGLTemplates/PWA_v2/index.html
@@ -56,62 +56,64 @@
         updateBannerVisibility();
       }
 
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/{{{ LOADER_FILENAME }}}";
-      var config = {
-        dataUrl: buildUrl + "/{{{ DATA_FILENAME }}}",
-        frameworkUrl: buildUrl + "/{{{ FRAMEWORK_FILENAME }}}",
-#if USE_THREADS
-        workerUrl: buildUrl + "/{{{ WORKER_FILENAME }}}",
-#endif
-#if USE_WASM
-        codeUrl: buildUrl + "/{{{ CODE_FILENAME }}}",
-#endif
-#if MEMORY_FILENAME
-        memoryUrl: buildUrl + "/{{{ MEMORY_FILENAME }}}",
-#endif
-#if SYMBOLS_FILENAME
-        symbolsUrl: buildUrl + "/{{{ SYMBOLS_FILENAME }}}",
-#endif
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: {{{ JSON.stringify(COMPANY_NAME) }}},
-        productName: {{{ JSON.stringify(PRODUCT_NAME) }}},
-        productVersion: {{{ JSON.stringify(PRODUCT_VERSION) }}},
-        showBanner: unityShowBanner,
-      };
+      // Automatically detect the version from the version.json file
+      fetch('Build/version.json')
+        .then(response => response.json())
+        .then(versionData => {
+          var version = versionData.version;
 
-      // By default Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
+          var buildUrl = "Build";
+          var loaderUrl = `${buildUrl}/{{{ LOADER_FILENAME }}}?version=${version}`;
+          var config = {
+            dataUrl: `${buildUrl}/{{{ DATA_FILENAME }}}?version=${version}`,
+            frameworkUrl: `${buildUrl}/{{{ FRAMEWORK_FILENAME }}}?version=${version}`,
+    #if USE_THREADS
+            workerUrl: `${buildUrl}/{{{ WORKER_FILENAME }}}?version=${version}`,
+    #endif
+    #if USE_WASM
+            codeUrl: `${buildUrl}/{{{ CODE_FILENAME }}}?version=${version}`,
+    #endif
+    #if MEMORY_FILENAME
+            memoryUrl: `${buildUrl}/{{{ MEMORY_FILENAME }}}?version=${version}`,
+    #endif
+    #if SYMBOLS_FILENAME
+            symbolsUrl: `${buildUrl}/{{{ SYMBOLS_FILENAME }}}?version=${version}`,
+    #endif
+            streamingAssetsUrl: "StreamingAssets",
+            companyName: {{{ JSON.stringify(COMPANY_NAME) }}},
+            productName: {{{ JSON.stringify(PRODUCT_NAME) }}},
+            productVersion: version,
+            showBanner: unityShowBanner,
+          };
 
-      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-        // Mobile device style: fill the whole browser client area with the game canvas:
-        var meta = document.createElement('meta');
-        meta.name = 'viewport';
-        meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-        document.getElementsByTagName('head')[0].appendChild(meta);
-      }
+          if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+            var meta = document.createElement('meta');
+            meta.name = 'viewport';
+            meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+            document.getElementsByTagName('head')[0].appendChild(meta);
+          }
 
-#if BACKGROUND_FILENAME
-      canvas.style.background = "url('" + buildUrl + "/{{{ BACKGROUND_FILENAME.replace(/'/g, '%27') }}}') center / cover";
-#endif
-      loadingBar.style.display = "block";
+    #if BACKGROUND_FILENAME
+          canvas.style.background = "url('" + buildUrl + "/{{{ BACKGROUND_FILENAME.replace(/'/g, '%27') }}}') center / cover";
+    #endif
+          loadingBar.style.display = "block";
 
-      var script = document.createElement("script");
-      script.src = loaderUrl;
-      script.onload = () => {
-        createUnityInstance(canvas, config, (progress) => {
-          progressBarFull.style.width = 100 * progress + "%";
-        }).then((unityInstance) => {
-          loadingBar.style.display = "none";
-        }).catch((message) => {
-          alert(message);
+          var script = document.createElement("script");
+          script.src = loaderUrl;
+          script.onload = () => {
+            createUnityInstance(canvas, config, (progress) => {
+              progressBarFull.style.width = 100 * progress + "%";
+            }).then((unityInstance) => {
+              loadingBar.style.display = "none";
+            }).catch((message) => {
+              alert(message);
+            });
+          };
+          document.body.appendChild(script);
+        })
+        .catch(error => {
+          console.error('Error fetching version.json:', error);
         });
-      };
-      document.body.appendChild(script);
     </script>
   </body>
 </html>
